# CVRP-DRL-GA

./: README.md  pyproject.toml
app/: main.py
app/api/routers/: __init__.py
app/config/: __init__.py
app/core/constants/: models.py
app/core/drl/: actor_critic_agent.py  cvrp_environment.py  pointer_network.py  population_generator.py
app/core/experiments/: __init__.py  experiment_runner.py  result_collector.py  statistical_analysis.py
app/core/ga/: genetic_algorithm.py  individual.py  operators.py  population_generator.py
app/core/utils/: __init__.py  cvrp_helpers.py  distance_calculator.py  instance_generator.py  solution_evaluator.py  vrplib_loader.py
app/data/experiment_instances/: dataset_summary.json
app/data/presets/: preset_expert_clustered_100.json  preset_expert_clustered_120.json  preset_expert_random_100.json  preset_junior_clustered_25.json  preset_junior_clustered_30.json  preset_junior_random_25.json  preset_mid_clustered_50.json  preset_mid_clustered_60.json  preset_mid_random_50.json  preset_scalability_random_150.json  preset_scalability_random_20.json  preset_scalability_random_75.json
app/exceptions/: __init__.py
app/lifespan/: __init__.py
app/middleware/: session.py
app/schemas/: __init__.py  cvrp_instance.py  drl_config.py  ga_config.py  metrics.py  solution.py
app/scripts/: train_expert.py  train_junior.py  train_mid.py
app/scripts/drl/: train_expert.py  train_junior.py  train_mid.py
app/scripts/experiments/: analyze_results.py  full_pipeline.py  generate_experiment_instances.py  (+3 more)
app/services/: __init__.py
(+2537 files in other folders)
